# invaders

./: CMakeLists.txt  README.md  toolchain-mingw.cmake
android/Invaders/: settings.gradle
android/Invaders/app/: build.gradle
android/Invaders/app/src/androidTest/java/com/example/invaders/: ExampleInstrumentedTest.java
android/Invaders/app/src/main/assets/shaders/: background.fs  background.vs  blur.fs  enemy.fs  enemy.vs  explosion.fs  explosion.vs  hdr.fs  parallax.fs  parallax.vs  player.fs  player.vs  playerModel.vs  text.fs  text.vs
android/Invaders/app/src/main/cpp/: CMakeLists.txt  audio_manager.cpp  native-lib.cpp  shader.cpp
android/Invaders/app/src/main/cpp/include/: audio_manager.h  model.h  shader.h
android/Invaders/app/src/main/java/com/antash/invaders/: AudioManagerJNI.java  GLGameView.java  GameServicesManager.java  MainActivity.java
android/Invaders/app/src/main/java/com/example/invaders/: AudioManagerJNI.java  GLGameView.java  GameServicesManager.java  MainActivity.java
android/Invaders/app/src/test/java/com/example/invaders/: ExampleUnitTest.java
android/Invaders/gradle/wrapper/: gradle-wrapper.properties
include/: audio_manager.h  camera.h  mesh.h  shader.h
include/glad/: glad.h
resources/shaders/: background.fs  background.vs  blur.fs  enemy.fs  enemy.vs  explosion.fs  explosion.vs  hdr.fs  parallax.fs  parallax.vs  playerModel.fs  playerModel.vs  text.vs
src/: audio_manager.cpp  camera.cpp  glad.c  main.cpp  mesh.cpp  model.cpp  shader.cpp
win-libs/assimp/: .BUILDINFO  .MTREE  .PKGINFO
win-libs/assimp/lib/cmake/assimp-5.4/: assimpTargets.cmake
win-libs/assimp/lib/pkgconfig/: assimp.pc
